# stick

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  LICENSE_BOOST_1_0.txt  LICENSE_MIT.txt  README.md  build.rs  fmt_db.rs  readme.md
.github/workflows/: ci.yml
ctlr_db/: README.md  db.toml
ctlr_db/ctlr/: README.md
ctlr_db/ctlr/list/: 03002509E8030101.toml  03004F0404041101.toml  03005E048E021001.toml  03006F0E01050001.toml  03006F0EA802xxxx.toml  xxxx38071817xxxx.toml  xxxx4F040AB1xxxx.toml  xxxxDE284211xxxx.toml  xxxxxxxxxxxxxxxx.toml
ctlr_db/ctlr/mapping/: 030000F003000001.toml  0300022000901101.toml  0300030003000200.toml  03000B0433650001.toml  03000D0F0D000001.toml  03000D0F16000001.toml  03000D0F22001101.toml  03000D0F85001001.toml  03000D0F86000201.toml  03000D0F92001101.toml  0300100082001101.toml  0300100801E51001.toml  0300242F73001101.toml  0300300F12111101.toml  0300321500111101.toml  0300321502041101.toml  0300341A05F71001.toml  0300380750321101.toml  0300380750821101.toml  0300380780841101.toml  0300450C20431001.toml  0300451308301001.toml  0300457522111001.toml  03004C0568021081.toml  03004F0400B31001.toml  03004F0407D00001.toml  03004F0409D00001.toml  03004F040ED01101.toml  03004F0412B31001.toml  03004F0415B31001.toml  03004F0423B30001.toml  0300550910721101.toml  0300550914721101.toml  03005E0489022101.toml  03005E048E021401.toml  03005E048E022020.toml  03005E048E027305.toml  0300632575051001.toml  0300666604880001.toml  03006D040AC21001.toml  (+47 more)
examples/: example.rs  haptic.rs  jstest.rs  readme.rs
examples/typer/: Cargo.toml
examples/typer/src/: main.rs
fmt/: Cargo.toml
fmt/src/: main.rs
map/: Cargo.toml
map/src/: main.rs
pad_db/: README.md  db.toml  format.rs
pad_db/linux/: 044F0404.toml
pad_db/pad/: README.md
pad_db/pad/mapping/: 030000F003000001.toml  030000F0F1000001.toml  0300022000901101.toml  0300030003000200.toml  03000B0433650001.toml  03000D0503081001.toml  03000D0F09001001.toml  03000D0F0D000001.toml  03000D0F10001101.toml  03000D0F16000001.toml  03000D0F22001101.toml  03000D0F5E001101.toml  03000D0F5F001101.toml  03000D0F66001101.toml  03000D0F67000101.toml  03000D0F6A001101.toml  03000D0F6B001101.toml  03000D0F6E001101.toml  03000D0F84001101.toml  03000D0F85001001.toml  03000D0F86000201.toml  03000D0F92001101.toml  03000D0FAA001101.toml  03000D0FC1001101.toml  03000D0FEE001101.toml  0300100082001101.toml  0300100801001001.toml  0300100801E51001.toml  0300100803001001.toml  0300120C05000001.toml  0300120C05001001.toml  0300120C100E1101.toml  0300120C101E1101.toml  0300242E88160101.toml  0300242F2D001101.toml  0300242F73001101.toml  0300242F8A001101.toml  0300250905000001.toml  0300250966880001.toml  03002509E8030101.toml  (+287 more)
pad_db/pads/: HOTAS.toml
pad_db/pads/Linux/: 030000F003000001.toml  030000F0F1000001.toml  0300022000901101.toml  03000D0503081001.toml  03000D0F09001001.toml  03000D0F0D000001.toml  03000D0F10001101.toml  03000D0F16000001.toml  03000D0F22001101.toml  03000D0F5E001101.toml  03000D0F5F001101.toml  03000D0F66001101.toml  03000D0F67000101.toml  03000D0F6A001101.toml  03000D0F6B001101.toml  03000D0F6E001101.toml  03000D0F84001101.toml  03000D0F85001001.toml  03000D0F86000201.toml  03000D0FAA001101.toml  03000D0FC1001101.toml  03000D0FEE001101.toml  0300100082001101.toml  0300120C100E1101.toml  0300120C101E1101.toml  0300242E88160101.toml  0300242F2D001101.toml  0300242F73001101.toml  0300242F8A001101.toml  0300250966880001.toml  03002509E8030101.toml  0300280401400001.toml  0300300F10011001.toml  0300300F12011001.toml  0300300F12111101.toml  0300321500091101.toml  0300321500101101.toml  0300321500111101.toml  0300321501041101.toml  0300321502041101.toml  (+213 more)
pad_db/pads/linux/: 044F0404.toml
sdb/linux/: 03002509E8030101.toml  03004C0568021081.toml  03004F0404041101.toml  03005E048E021001.toml  03005E04D1020101.toml  03006D0416C21101.toml  03006F0E01050001.toml  0300790044181001.toml  0300B40411241101.toml  0300B40412241101.toml  0300B50716031001.toml  0500151940000100.toml  05005E04E0020309.toml
src/: button.rs  controller_manager.rs  ctlr.rs  descriptor.rs  devices.rs  event.rs  gamepad.rs  gamepads.rs  hub.rs  input.rs  lib.rs  map.rs  pad.rs  port.rs  remapper.rs
src/controllers/: s00791844.rs  s054C0268.txt  s07B50316.txt  s0E6F0501.rs  s0E6F0501.txt  warthog_throttle.toml
src/ffi/: android.rs  dummy.rs  linux.rs  macos.rs  mod.rs  wasm32.rs  windows.rs
src/linux/: mod.rs
src/native/: mod.rs
src/native/ffi/android/: mod.rs
src/native/ffi/linux/: destroy.rs  joystick_async.rs  joystick_create.rs  joystick_map.rs  joystick_name.rs  joystick_poll_event.rs  mod.rs
src/native/ffi/macos/: mod.rs
src/native/ffi/windows/: mod.rs
src/remapping/: default.rs  game_cube.rs
stick/: Cargo.toml  README.md  build.rs  remap_linux.sdb  sdlgc_linux.sdb
stick/examples/: haptic.rs
stick/src/: connector.rs  ctlr.rs  event.rs  focus.rs  gamepad.rs  lib.rs  listener.rs  raw.rs  sys.rs
stick/src/ffi/: dummy.rs  linux.rs  mod.rs  redox.rs  wasm32.rs  windows.rs
stick/src/linux/: controller.rs  evdev.rs  haptic.rs  linux.rs
stick/src/platform/: platform.rs  unsupported.rs
stick/src/raw/: android.rs  ardaku.rs  bsd.rs  ios.rs  linux.rs  windows.rs
stick/src/sys/: bsd.rs  linux.rs  windows.rs
stick/src/windows/: controller.rs  windows.rs  xinput.rs
stick_db/: format.rs
stick_db/ctlr/list/: 03004F0404041101.toml  03005E048E021001.toml  03005E04D1020101.toml  0300B50716031001.toml  xxxx4F040AB1xxxx.toml  xxxx79003018xxxx.toml
xtask/: Cargo.toml
xtask/src/: main.rs  sdb.rs
