# Copyright © 2017-2022 The Stick Contributors.
#
# Licensed under any of:
# - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
# - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# - MIT License (https://mit-license.org/)
# At your option (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).  This file may not be copied,
# modified, or distributed except according to those terms.

[package]
name = "stick"
version = "0.12.4"
license = "Apache-2.0 OR MIT OR BSL-1.0"

description = "Platform-agnostic asynchronous gamepad, joystick and flighstick library"
repository = "https://github.com/libcala/stick"
documentation = "https://docs.rs/stick"
homepage = "https://github.com/libcala/stick/blob/main/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "src/", "*.sdb"]
categories = ["hardware-support", "asynchronous", "game-development"]
keywords = ["ux", "joystick", "gamepad", "platform-agnostic", "controller"]
readme = "README.md"
edition = "2021"

[target.'cfg(all(not(target_arch="wasm32"),target_os="linux"))'.dependencies]
smelling_salts = "0.6"
lookit = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "xinput", "winerror"] }
log = { version = "0.4", default-features = false }

[dev-dependencies]
pasts = "0.8"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[features]
# By default, just include the stick controller database.
default = ["sdb"]
# Include the SDL game controller database (button/axis remappings).
gcdb = []
# Include the stick controller database (button/axis remappings).
sdb = []
