[package]
name = "stick"
version = "0.13.0"
license = "Apache-2.0 OR BSL-1.0 OR MIT"

description = """
    Platform-agnostic asynchronous gamepad, joystick, and flightstick library
"""
repository = "https://github.com/ardaku/stick"
documentation = "https://docs.rs/stick"
homepage = "https://github.com/ardaku/stick/blob/stable/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "src/", "*.sdb"]
categories = ["hardware-support", "asynchronous", "game-development"]
keywords = ["ux", "joystick", "gamepad", "platform-agnostic", "controller"]
readme = "README.md"
edition = "2021"

[target.'cfg(all(not(target_arch="wasm32"),target_os="linux"))'.dependencies]
smelling_salts = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "xinput", "winerror"] }
log = { version = "0.4", default-features = false }

[dev-dependencies]
pasts = "0.8"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[features]
# By default, just include the stick controller database.
default = ["sdb"]
# Include the SDL game controller database (button/axis remappings).
gcdb = []
# Include the stick controller database (button/axis remappings).
sdb = []
